--------------------------------------------------------------------------------
drkns 12.02.2023 00:38:45 +0000 - build 6102

1. Refactoring.

2. More tests.

3. Warnings.

--------------------------------------------------------------------------------
drkns 06.02.2023 22:08:52 +0000 - build 6101

1. Refactoring.

--------------------------------------------------------------------------------
drkns 05.02.2023 13:01:34 +0000 - build 6100

1. gh-483: Do not update panel curdir too early. Experimental.

2. Refactoring.

3. More logging.

--------------------------------------------------------------------------------
MZK 30.01.2023 21:02:33 -0800 - build 6099

1. Viewer now uses the standard Search dialog.

2. Removed the following features:
   - Opening Viewer's Search dialog on typing the first character of the search pattern.
     See gh-614 for the discussion.
   - Search dialog auto-focus.

--------------------------------------------------------------------------------
rohitab 30.01.2023 01:17:44 +1100 - build 6098

1. gh-617: Allow history to be used with masked edit controls.

--------------------------------------------------------------------------------
MZK 28.01.2023 18:41:14 -0800

1. gh-618: Adjusted hotkey assignments on Search / Replace and Find File dialogs.

--------------------------------------------------------------------------------
drkns 24.01.2023 20:29:40 +0000 - build 6097

1. Continue 6095.

--------------------------------------------------------------------------------
MZK 22.01.2023 09:32:07 -0800 - build 6096

1. Added "Search for Hex" functionality to the unified SearchReplace dialog.
   Internal implementation only; no user-visible changes are expected.

--------------------------------------------------------------------------------
drkns 22.01.2023 21:06:44 +0000 - build 6095

1. Reduce CPU load on Ctrl+Alt+Shift.

--------------------------------------------------------------------------------