@@ -1,4 +1,9 @@
 --------------------------------------------------------------------------------
+drkns 14.02.2023 21:56:31 +0000 - build 6103
+
+1. A few fixes.
+
+--------------------------------------------------------------------------------
 drkns 12.02.2023 00:38:45 +0000 - build 6102
 
 1. Refactoring.
